feat: initial line level classification
