# api/harpocrates_server/models/__init__.py
@@ -10,6 +10,7 @@ from harpocrates_server.models.documents import Documents
 from harpocrates_server.models.feature import Feature
 from harpocrates_server.models.feature_all_of import FeatureAllOf
 from harpocrates_server.models.http_status import HttpStatus
+from harpocrates_server.models.line import Line
 from harpocrates_server.models.predicted_classification import PredictedClassification
 from harpocrates_server.models.predicted_classification_explanation import PredictedClassificationExplanation
 from harpocrates_server.models.section import Section
