# api/harpocrates_server/models/line.py
@@ -10,11 +10,8 @@ from harpocrates_server.models.predicted_classification import PredictedClassifi
 from harpocrates_server.models.sensitive_sections import SensitiveSections
 from harpocrates_server import util
 
-from harpocrates_server.models.predicted_classification import (
-    PredictedClassification,
-)  # noqa: E501
+from harpocrates_server.models.predicted_classification import PredictedClassification  # noqa: E501
 from harpocrates_server.models.sensitive_sections import SensitiveSections  # noqa: E501
-
 
 class Line(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -22,9 +19,7 @@ class Line(Model):
     Do not edit the class manually.
     """
 
-    def __init__(
-        self, predicted_classification=None, sensitive_sections=None, content=None
-    ):  # noqa: E501
+    def __init__(self, predicted_classification=None, sensitive_sections=None, content=None):  # noqa: E501
         """Line - a model defined in OpenAPI
 
         :param predicted_classification: The predicted_classification of this Line.  # noqa: E501
@@ -35,15 +30,15 @@ class Line(Model):
         :type content: str
         """
         self.openapi_types = {
-            "predicted_classification": PredictedClassification,
-            "sensitive_sections": SensitiveSections,
-            "content": str,
+            'predicted_classification': PredictedClassification,
+            'sensitive_sections': SensitiveSections,
+            'content': str
         }
 
         self.attribute_map = {
-            "predicted_classification": "predictedClassification",
-            "sensitive_sections": "sensitiveSections",
-            "content": "content",
+            'predicted_classification': 'predictedClassification',
+            'sensitive_sections': 'sensitiveSections',
+            'content': 'content'
         }
 
         self._predicted_classification = predicted_classification
@@ -51,7 +46,7 @@ class Line(Model):
         self._content = content
 
     @classmethod
-    def from_dict(cls, dikt) -> "Line":
+    def from_dict(cls, dikt) -> 'Line':
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -124,8 +119,6 @@ class Line(Model):
         :type content: str
         """
         if content is None:
-            raise ValueError(
-                "Invalid value for `content`, must not be `None`"
-            )  # noqa: E501
+            raise ValueError("Invalid value for `content`, must not be `None`")  # noqa: E501
 
         self._content = content
