# api/harpocrates_server/service/document.py
@@ -4,7 +4,7 @@ from typing import Dict, List
 from copy import deepcopy
 
 from harpocrates_server.models.document import Document
-from harpocrates_server.models.paragraph import Paragraph
+from harpocrates_server.models.line import Line
 
 
 def document_from_mongo_dict(doc: Dict) -> Document:
@@ -15,32 +15,34 @@ def document_from_mongo_dict(doc: Dict) -> Document:
     return document
 
 
-def paragraphs_from_content(content: str) -> List[Paragraph]:
+def lines_from_content(content: str) -> List[Line]:
     """
     Given a string representation of document content,
-    this function splits it into a list of Paragraph objects 
+    this function splits it into a list of Line objects 
 
     :param content: document content to split
     """
 
-    # Regex matching paragraph limit
+    # Regex matching line limit
     # delimiter = re.compile(r"(\n\s*\n)")
-    delimiter = re.compile(r"(?=\n\s*\n)")
-    paragraphs_content = []
-    for paragraph in delimiter.split(content):
-        # attach whitespace only "paragraphs" to the previous one
-        # except for the first one
-        if paragraphs_content and paragraph.isspace():
-            paragraphs_content[-1] += paragraph
-        else:
-            paragraphs_content.append(paragraph)
+    # delimiter = re.compile(r"(\n)")
+    # lines_content = []
+    # for line in delimiter.split(content):
+    #     # attach whitespace only "lines" to the previous one
+    #     # except for the first one
+    #     if lines_content and line.isspace():
+    #         lines_content[-1] += line
+    #     else:
+    #         lines_content.append(line)
 
-    # build a list of paragraph objects
-    paragraphs = []
-    for paragraph_content in paragraphs_content:
-        paragraphs.append(Paragraph(content=paragraph_content))
+    lines_content = content.splitlines(True)
 
-    return paragraphs
+    # build a list of line objects
+    lines = []
+    for line_content in lines_content:
+        lines.append(Line(content=line_content))
+
+    return lines
 
 
 def document_from_mongo_dict(doc: Dict) -> Document:
