# api/populate.py
@@ -21,7 +21,7 @@ from harpocrates_server.service.classification import (
     get_vectorizer,
 )
 
-from harpocrates_server.service.document import paragraphs_from_content
+from harpocrates_server.service.document import lines_from_content
 from harpocrates_server.controllers.document_controller import (
     classify,
     classify_text,
@@ -43,9 +43,9 @@ def process_document(path, data):
     collection = pathlib.Path(path).parts[-3]
     name = pathlib.Path(path).parts[-1]
 
-    paragraphs = paragraphs_from_content(data)
+    lines = lines_from_content(data)
 
-    document = Document(name=name, paragraphs=paragraphs)
+    document = Document(name=name, lines=lines)
     operation_result = db[collection].insert_one(document.to_dict())
     doc_id = operation_result.inserted_id
     classify(collection, doc_id)
